# freehand

./: .gitignore  CMakeLists.txt  DF.hpp  FreeHand.cpp  FreeHand.h  MemoryAllocationAnalyzer.cpp  MemoryAllocationAnalyzer.hpp  README.md  UAF.hpp  freehand.c
tests/: Makefile
tests/conditionals/correct/: correct.c
tests/conditionals/df/: df.c
tests/conditionals/uaf/: uaf.c
tests/loops/correct/: correct.c
tests/loops/df/: df.c
tests/loops/uaf/: uaf.c
tests/simple/correct/: Makefile  correct.c
tests/simple/df/: df.c
tests/simple/uaf/: uaf.c
