CMAKE_MINIMUM_REQUIRED(VERSION 3.22)
PROJECT(freehand)

SET(CMAKE_CXX_STANDARD 20)

FIND_PACKAGE(LLVM REQUIRED)
FIND_PACKAGE(Boost COMPONENTS program_options filesystem system)

INCLUDE_DIRECTORIES( ${LLVM_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )

ADD_EXECUTABLE(freehand
        FreeHand.cpp
        FreeHand.h)

TARGET_LINK_LIBRARIES(freehand LINK_PUBLIC ${LLVM_LIBRARIES} )
TARGET_LINK_LIBRARIES(freehand LINK_PUBLIC ${Boost_LIBRARIES} )